// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly expenses summary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     total 
    $0.25
  </h1>
</div>
`;

exports[`should render correctly expenses summary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    25
     
    expenses
     total 
    $25.66
  </h1>
</div>
`;
